...
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:endIconTint="@color/cometchat_primary_text_color"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etUID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLines="1"
...
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Don't have any users?" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/create_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:onClick="createUser"
                android:text="Create Now"
                android:textAllCaps="true"
...
