...
                app:endIconTint="@color/primaryTextColor"
                app:hintTextColor="@color/primaryTextColor"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Caption"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLines="1"
...
